some changes in namespace and function names for ss
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@134 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -132,8 +132,60 @@
 	Models},
   author = {Jerome Friedman and Trevor Hastie and Rob Tibshirani},
   year = {2013},
-  note = {\proglang{R}~package version~1.8-5},
+  note = {\proglang{R}~package version~1.9-5},
   url = {http://CRAN.R-project.org/package=glmnet}
+}
+
+@MANUAL{s4vd,
+  title = {\pkg{s4vd}: Biclustering via sparse singular value decomposition incorporating stability selection
+  Models},
+  author = {Martin Sill and Sebastian Kaiser},
+  year = {2011},
+  note = {\proglang{R}~package version~1.0},
+  url = {http://CRAN.R-project.org/package=s4vd}
+}
+
+@article{sill2011robust,
+  title={Robust biclustering by sparse singular value decomposition incorporating stability selection},
+  author={Sill, Martin and Kaiser, Sebastian and Benner, Axel and Kopp-Schneider, Annette},
+  journal={Bioinformatics},
+  volume={27},
+  number={15},
+  pages={2089--2097},
+  year={2011},
+  publisher={Oxford Univ Press}
+}
+
+@MANUAL{mboost,
+  title = {\pkg{mboost}: Model-Based Boosting},
+  author = {Torsten Hothorn and Peter Buehlmann and Thomas Kneib and Matthias Schmid and Benjamin Hofner and Fabian Sobotka and Fabian Scheipl},
+  year = {2013},
+  note = {\proglang{R}~package version~2.2-3},
+  url = {http://CRAN.R-project.org/package=mboost}
+}
+
+@MANUAL{penalized,
+  title = {\pkg{penalized}: L1 (lasso and fused lasso) and L2 (ridge) penalized estimation in GLMs and in the Cox model},
+  author = {Jelle Goeman and Rosa Meijer and Nimisha Chaturvedi},
+  year = {2012},
+  note = {\proglang{R}~package version~0.9-42},
+  url = {http://CRAN.R-project.org/package=penalized}
+}
+
+@MANUAL{BioMark,
+  title = {\pkg{BioMark}: Find biomarkers in two-class discrimination problems},
+  author = {Ron Wehrens and Pietro Franceschi},
+  year = {2012},
+  note = {\proglang{R}~package version~0.4.1},
+  url = {http://CRAN.R-project.org/package=BioMark}
+}
+
+@MANUAL{lol,
+  title = {\pkg{BioMark}: Lots Of Lasso},
+  author = {Yinyin Yuan},
+  year = {2011},
+  note = {\proglang{R}~package version~1.10.0},
+  url = {http://www.bioconductor.org/packages/2.13/bioc/html/lol.html}
 }
 
 @MANUAL{c060,
@@ -354,4 +406,26 @@ Classification	and Regression via Model-Based Global Optimization},
   volume = {67(2)},
   pages = {301--320}
 }
+
+@article{friedman07,
+  author = {Friedman, J. and Hastie, T. and H{\"o}fling, H. and Tibshirani, R.},
+  journal = {The Annals of Applied Statistics},
+  number = {2},
+  pages = {302--332},
+  title = {{Pathwise coordinate optimization}},
+  volume = 1,
+  year = 2007
+}
+
+
+@ARTICLE{Fu98,
+  author = {Fu, Wenjiang J.},
+  title = {{Penalized Regressions: The Bridge versus the Lasso}},
+  journal = {Journal of Computational and Graphical Statistics},
+  year = {1998},
+  volume = {7},
+  pages = {397--416},
+  number = {3} 
+}
+
 
